Adding Styles to the landing page

--- a/app/views/staticpages/index.html.erb
+++ b/app/views/staticpages/index.html.erb
@@ -1,4 +1,12 @@
-<h1>Hello my name is Philippe</h1>
+<!-- this is my index page -->
 
-<h4>I am having fun learning how to code at the Firehose Weekend with some bad sailor instructor but great surfer.</h4>
+<div class="span6 offset3 stolen-surfbox">
+<h1 class="custom-font1">Hello my name is Philippe</h1>
 
+<br class="spacer"/>
+
+<h2 class="custom-font2">I am having fun learning how to code at the Firehose Weekend with some bad sailor instructor but great surfer.</h2>
+
+<%= link_to("Launch App", "#", :class => 'btn btn-primary btn-large') %>
+
+</div>
