Added simple form and pic.rb to controller

--- a/app/views/staticpages/index.html.erb
+++ b/app/views/staticpages/index.html.erb
@@ -1,6 +1,6 @@
 <!-- this is my index page -->
 
-<div class="span6 offset3 stolen-surfbox">
+<div class="span6 offset3 shower-curtain">
 <h1 class="custom-font1">Hello my name is Philippe</h1>
 
 <br class="spacer"/>
