--- a/app/assets/stylesheets/staticpages.css.scss
+++ b/app/assets/stylesheets/staticpages.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.stolen-surfbox {
+.shower-curtain {
 background-color: rgba(36,32,33,0.5);
 box-shadow: 2px -2px 2px 2px rgba(36,32,33,0.5);
 padding: 3%;
