styled the pics page and the new form

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -9,14 +9,32 @@ body {
 
 .custom-font1{
 	font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
-	font-size: 3em;
+	font-size: 3.5em;
+	line-height: 1.2em;
 	font-weight: 100;
 	letter-spacing: 0.05em;
 	text-rendering: optimizeLegibility;
 	color: white;
+	text-align:center;
 }
 
 .custom-font2{
+	font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+	font-size: 2em;
+	line-height: 1.2em;
+	font-weight: 300;
+	color: white;
+}
+
+.custom-font3{
+	font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+	font-size: 1.5em;
+	line-height: 1.7em;
+	font-weight: 300;
+	color: white;
+}
+
+.custom-font4{
 	font-family: Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
 	font-size: 1em;
 	line-height: 1.2em;
@@ -37,5 +55,12 @@ body {
 .my-wrapper h3,
 .my-wrapper p {
 	color:white;
+}
+
+.shower-curtain {
+background-color: rgba(36,32,33,0.5);
+box-shadow: 2px -2px 2px 2px rgba(36,32,33,0.5);
+padding: 3%;
+margin-top: 6em
 }
 
