--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -1,22 +1,20 @@
 <div class="my-wrapper">
-<h1>My Pics</h1>
+<h1 class="custom-font1">My Pics</h1>
 
 <% @pics.each do |pic| %>
-<div class="span6 offset3 shower-curtain">
+<div class="span3 shower-curtain">
 	<div class="box">
-	<h2>
+	<h2 class="custom-font2">
 		Hour <%= pic.hour %>
 	</h2>
 
-	<h3>
+	<h3 class="custom-font3">
 		I feel <%= pic.emotion %>
 	</h3>
 
-	<p>
+	<p class="custom-font4">
 		I learned that<%= pic.learned %>
 	</p>
-
-	<%= link_to("save", "#", :class => 'btn btn-primary btn-large') %>
 
 	</div>
 </div>
