--- a/app/views/staticpages/index.html.erb
+++ b/app/views/staticpages/index.html.erb
@@ -7,6 +7,6 @@
 
 <h2 class="custom-font2">I am having fun learning how to code at the Firehose Weekend with some bad sailor instructor but great surfer.</h2>
 
-<%= link_to("Launch App", "#", :class => 'btn btn-primary btn-large') %>
+<%= link_to("Launch App", pics_path, :class => 'btn btn-primary btn-large') %>
 
 </div>
