--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       </a>
  
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="#">Firehose Weekend</a>
+      <%= link_to 'Firehose Weekend', root_path, :class => 'brand' %>
  
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
@@ -28,8 +28,11 @@
 
       <ul class="nav">
       		<li>
-        	<%=  link_to 'My App', '#' %>
+        	 <%=  link_to 'My App', pics_path %>
     		</li>
+        <li>
+           <%=  link_to 'New Pic', new_pic_path %>
+        </li>
       </ul>
  
     </div>
