allows to display images when connected to image folder

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -53,7 +53,8 @@ body {
 .my-wrapper h1,
 .my-wrapper h2,
 .my-wrapper h3,
-.my-wrapper p {
+.my-wrapper p, 
+.my-wrapper label{
 	color:white;
 }
 
