--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -8,6 +8,10 @@
 		Hour <%= pic.hour %>
 	</h2>
 
+	<div>
+		<%= image_tag pic.image %>
+	</div>
+
 	<h3 class="custom-font3">
 		I feel <%= pic.emotion %>
 	</h3>
